database info added

--- a/pasos.ipynb
+++ b/pasos.ipynb
@@ -4,6 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Una Base de Datos\n",
+    " es una colección organizada y estructurada de información que se almacena de manera persistente en un sistema informático. Su objetivo principal es permitir el acceso, manipulación y gestión eficiente de datos, facilitando así la recuperación y almacenamiento de información de manera coherente y segura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Se almacena en Tablas: filas y columnas. (Mostrar ejemplo en excel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operaciones CRUD:\n",
+    "\n",
+    "    - Crear (CREATE): cómo agregar nuevos datos a una base de datos.\n",
+    "    - Leer (READ): cómo recuperar información de una base de datos.\n",
+    "    - Actualizar (UPDATE): cómo modificar registros existentes.\n",
+    "    - Eliminar (DELETE): cómo eliminar datos de la base de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Paso 1\n",
     "\n",
     "- Quick start flask\n",
