--- a/pasos.ipynb
+++ b/pasos.ipynb
@@ -294,6 +294,7 @@
     "            Eliminar\n",
     "        </button>\n",
     "    </div>\n",
+    "    <!-- ELIMINAR DESDE ACA -->\n",
     "    <div class=\"bg-white rounded-lg p-4 flex justify-between items-center mb-2\">\n",
     "        <span class=\"font-bold\">Lujan</span>\n",
     "        <span class=\"text-gray-600\">Aranda</span>\n",
@@ -312,8 +313,16 @@
     "            Eliminar\n",
     "        </button>\n",
     "    </div>\n",
+    "    <!-- ACA -->\n",
     "    {% endfor %}\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Eliminamos esta parte del codigo ya esa parte es solo para mostrar como podria quedar, ya con los datos de la db va a ir creando solo el resto"
    ]
   },
   {
@@ -327,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Modificamos el form, hacemos que envie los datos a la ruta agregar_alumno y fijamos que el metodo es post"
+    "- Modificamos el form, hacemos que envie los datos a la ruta agregar_alumno e indicamos que el metodo es post ya que estamos enviando datos desde cliente a servidor"
    ]
   },
   {
@@ -347,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- le colocamos una etiqueta a los inputs que se llama 'name' y le ponemos el nombre con el que queremos recibir los datos\n"
+    "- le colocamos una etiqueta a los inputs llamada 'name' y le ponemos el nombre con el que queremos recibir los datos\n"
    ]
   },
   {
@@ -414,7 +423,7 @@
     "        edad = request.form['edad']\n",
     "        colegio = request.form['colegio']\n",
     "        \n",
-    "        # Hacemos print para saber que estan llegando los datos\n",
+    "        # Hacemos print para saber que estan llegando los datos y una vez confirmado podemos seguir con el codigo\n",
     "        print(nombre, apellido, edad, colegio)\n",
     "\n",
     "        # Instanciamos alumno con los datos que queremos agregar\n",
@@ -487,7 +496,7 @@
    },
    "outputs": [],
    "source": [
-    "<!--  Creamos una ancla para que al apretar eliminar redireccione a eliminar -->\n",
+    "<!--  Creamos una ancla dentro del boton para que al apretar eliminar redireccione a eliminar -->\n",
     "<a href=\"{{ url_for('eliminar_alumno', id_alumno=alumno.id_alumno) }}\">\n",
     "    Eliminar\n",
     "</a>"
