--- a/pasos.ipynb
+++ b/pasos.ipynb
@@ -501,6 +501,18 @@
     "    Eliminar\n",
     "</a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge\n",
+    "- Crear la funcionalidad de editar\n",
+    "- Que cuando vayas a la parte de editar te traiga los datos que queres editar y al cambiar que actualice la db\n",
+    "- El codigo tiene que estar bien comentado y facil de entender\n",
+    "\n",
+    "El primero en terminar se lleva el premio >:)"
+   ]
   }
  ],
  "metadata": {
