--- a/pasos.ipynb
+++ b/pasos.ipynb
@@ -35,9 +35,14 @@
     "\n",
     "- Quick start flask\n",
     "\n",
-    "- instalar flask y flask-sqlalchemy\n",
+    "- Instalamos flask con el siguiente comando en la terminal:\n",
+    "> pip install flask\n",
     "\n",
-    "- extension sqlite viewer"
+    "- y posteriormente flask-sqlalchemy:\n",
+    "> pip install flask-sqlalchemy\n",
+    "\n",
+    "- La extension para ver mejor la base de datos es: Sqlite Viewer \n",
+    "    - link: https://marketplace.visualstudio.com/items?itemName=qwtel.sqlite-viewer"
    ]
   },
   {
